--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 </section>
 
  <div id="result"></div>
+<h2 style="margin-top:30px;">Calculated Results</h2>
 
 <table id="resultTable" style="display:none;">
   <thead>
@@ -132,4 +133,5 @@
     Based on zoo nutrition and herpetological literature
   </p>
 </footer>
+
 
