--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
 </section>
 
  <div id="result"></div>
-<h2 style="margin-top:30px;">Calculated Results</h2>
+<div id="resultsSection" style="display:none;">
 
-<table id="resultTable" style="display:none;">
+  <h2 style="margin-top:30px;">Calculated Results</h2>
+
+  <table id="resultTable">
+
   <thead>
     <tr>
       <th>Category</th>
@@ -87,7 +90,7 @@
     </tr>
   </tbody>
 </table>
-
+</div>
 
   <script src="script.js"></script>
 
@@ -133,6 +136,7 @@
     Based on zoo nutrition and herpetological literature
   </p>
 </footer>
+
 
 
 
