--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 
 <body>
 
-  <h1>Reptile Energy Requirement Calculator</h1>
-  <p>
-    Estimate daily and weekly energy needs (kcal) and feeding amounts
-    for monitor lizards and snakes.
-  </p>
+ <header class="hero">
+  <div class="hero-text">
+    <h1>Reptile Energy Requirement Calculator</h1>
+    <p>
+      Estimate daily and weekly energy needs (kcal) and feeding amounts
+      for monitor lizards and snakes.
+    </p>
+  </div>
+</header>
+
 
   <label>Body weight (kg):</label><br>
   <input type="number" id="weight" step="0.1"><br><br>
@@ -133,3 +138,4 @@
 
 </body>
 </html>
+
