--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </div>
 </header>
 
+  <div class="container">
 
   <label>Body weight (kg):</label><br>
   <input type="number" id="weight" step="0.1"><br><br>
@@ -136,6 +137,8 @@
 
   <script src="script.js"></script>
 
+</div>  
 </body>
 </html>
+
 
