--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 
 <body>
 
- <header class="hero">
-  <div class="hero-text">
-    <h1>Reptile Energy Requirement Calculator</h1>
-    <p>
-      Estimate daily and weekly energy needs (kcal) and feeding amounts
-      for monitor lizards and snakes.
-    </p>
-  </div>
-</header>
+ <header class="hero"></header>
+
+<div class="container">
+  <h1>Reptile Energy Requirement Calculator</h1>
+  <p>
+    Estimate daily and weekly energy needs (kcal) and feeding amounts
+    for monitor lizards and snakes.
+  </p>
+
+  <!-- rest of your form goes here -->
+</div>
+
 
   <div class="container">
 
@@ -140,5 +143,6 @@
 </div>  
 </body>
 </html>
+
 
 
