--- a/index.html
+++ b/index.html
@@ -1,26 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Reptile Energy Calculator</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Reptile Energy Calculator</title>
+
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    max-width: 900px;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: #f5f5f5;
+  }
+
+  h1, h2 {
+    color: #2c3e50;
+  }
+
+  label {
+    font-weight: bold;
+  }
+
+  input, select, button {
+    padding: 8px;
+    font-size: 16px;
+    width: 100%;
+    max-width: 300px;
+  }
+
+  button {
+    margin-top: 15px;
+    cursor: pointer;
+  }
+
+  table {
+    margin-top: 25px;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  th, td {
+    border: 1px solid #ddd;
+    padding: 12px;
+  }
+
+  th {
+    background-color: #2c3e50;
+    color: white;
+    text-align: left;
+  }
+
+  tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  .container {
+    background: white;
+    padding: 25px;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  }
+
+  .info {
+    margin-top: 40px;
+    background: white;
+    padding: 25px;
+    border-radius: 8px;
+  }
+
+  footer {
+    margin-top: 50px;
+    font-size: 0.9em;
+    color: #555;
+    text-align: center;
+  }
+</style>
 </head>
 
 <body>
 
-<nav>
-  <a href="index.html">Energy Calculator</a> |
-  <a href="nutrition.html">Nutrient Calculator</a>
-</nav>
-
-<header class="hero"></header>
-
 <div class="container">
-
   <h1>Reptile Energy Requirement Calculator</h1>
   <p>
     Estimate daily and weekly energy needs (kcal) and feeding amounts
-    for monitor lizards and snakes.
+    for reptiles based on ecological group.
   </p>
 
   <label>Body weight (kg):</label><br>
@@ -31,12 +94,11 @@
 
   <label>Reptile group:</label><br>
   <select id="group">
-    <option value="varanid-large">Large varanid (Komodo, Varanus salvator)</option>
-    <option value="varanid-small">Small/medium varanid</option>
+    <option value="varanid-large">Large varanid (Komodo, water monitor)</option>
+    <option value="varanid-small">Small / medium varanid</option>
     <option value="snake-ambush">Ambush snake (python, boa)</option>
     <option value="snake-active">Active snake (colubrid)</option>
   </select><br><br>
-
 
   <label>Prey type:</label><br>
   <select id="prey">
@@ -48,58 +110,115 @@
 
   <button onclick="calculateEnergy()">Calculate</button>
 
-  <!-- RESULTS -->
   <div id="resultsSection" style="display:none;">
-
     <h2>Calculated Results</h2>
+    <p id="groupDesc"></p>
 
-    <table id="resultTable">
-      <thead>
-        <tr>
-          <th>Category</th>
-          <th>Value</th>
-        </tr>
-      </thead>
+    <table>
       <tbody>
-        <tr><td>Energy (per day)</td><td id="kcalDay"></td></tr>
-        <tr><td>Energy (per week)</td><td id="kcalWeek"></td></tr>
-        <tr><td>Total prey per week</td><td id="preyWeek"></td></tr>
-        <tr><td>Prey per feeding</td><td id="preyFeeding"></td></tr>
-        <tr><td>Feeding frequency</td><td id="feedingFreq"></td></tr>
+        <tr>
+          <td>Energy requirement (per day)</td>
+          <td id="kcalDay"></td>
+        </tr>
+        <tr>
+          <td>Energy requirement (per week)</td>
+          <td id="kcalWeek"></td>
+        </tr>
+        <tr>
+          <td>Total prey per week</td>
+          <td id="preyWeek"></td>
+        </tr>
+        <tr>
+          <td>Prey per feeding</td>
+          <td id="preyFeeding"></td>
+        </tr>
+        <tr>
+          <td>Feeding frequency</td>
+          <td id="feedingFreq"></td>
+        </tr>
       </tbody>
     </table>
-
-    <h2 style="margin-top:40px;">Estimated Nutrient Intake</h2>
-
-    <table id="nutrientTable" style="display:none;">
-      <thead>
-        <tr>
-          <th>Nutrient</th>
-          <th>Per week</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>Protein</td><td id="protein"></td></tr>
-        <tr><td>Fat</td><td id="fat"></td></tr>
-        <tr><td>Calcium</td><td id="calcium"></td></tr>
-        <tr><td>Phosphorus</td><td id="phosphorus"></td></tr>
-        <tr><td><strong>Ca:P ratio</strong></td><td id="capRatio"></td></tr>
-      </tbody>
-    </table>
-
-    <p id="capNote"></p>
   </div>
+</div>
 
+<div class="info">
+  <h2>How this calculator works</h2>
+  <ul>
+    <li>Energy is estimated using body mass<sup>0.75</sup></li>
+    <li>Temperature adjusted using Q10 = 2 (reference 30 °C)</li>
+    <li>Feeding frequency reflects foraging ecology</li>
+  </ul>
 </div>
 
 <footer>
-  <p>
-    Reptile Energy Calculator v1.0<br>
-    Developed by Abdul Fattah
-  </p>
+  Reptile Energy Calculator v1.0<br>
+  Developed by Abdul Fattah
 </footer>
 
-<script src="script.js"></script>
+<script>
+function calculateEnergy() {
+
+  const weight = parseFloat(document.getElementById("weight").value);
+  const temperature = parseFloat(document.getElementById("temperature").value);
+  const group = document.getElementById("group").value;
+  const prey = document.getElementById("prey").value;
+
+  if (!weight || weight <= 0) {
+    alert("Please enter a valid body weight.");
+    return;
+  }
+
+  const groupParameters = {
+    "varanid-large": {
+      baseKcal: 40,
+      feedings: 2,
+      desc: "Large, highly active varanid"
+    },
+    "varanid-small": {
+      baseKcal: 35,
+      feedings: 3,
+      desc: "Small to medium varanid"
+    },
+    "snake-ambush": {
+      baseKcal: 25,
+      feedings: 1,
+      desc: "Low-activity ambush predator"
+    },
+    "snake-active": {
+      baseKcal: 30,
+      feedings: 1,
+      desc: "Active foraging snake"
+    }
+  };
+
+  const preyEnergy = {
+    rat: 2.5,
+    mouse: 2.3,
+    chicken: 1.6,
+    fish: 1.4
+  };
+
+  const params = groupParameters[group];
+
+  const baseEnergy = params.baseKcal * Math.pow(weight, 0.75);
+  const tempFactor = Math.pow(2, (temperature - 30) / 10);
+
+  const kcalDay = baseEnergy * tempFactor;
+  const kcalWeek = kcalDay * 7;
+
+  const preyPerWeek = kcalWeek / preyEnergy[prey];
+  const preyPerFeeding = preyPerWeek / params.feedings;
+
+  document.getElementById("kcalDay").innerText = kcalDay.toFixed(0) + " kcal";
+  document.getElementById("kcalWeek").innerText = kcalWeek.toFixed(0) + " kcal";
+  document.getElementById("preyWeek").innerText = preyPerWeek.toFixed(0) + " g";
+  document.getElementById("preyFeeding").innerText = preyPerFeeding.toFixed(0) + " g";
+  document.getElementById("feedingFreq").innerText = params.feedings + "× per week";
+  document.getElementById("groupDesc").innerText = params.desc;
+
+  document.getElementById("resultsSection").style.display = "block";
+}
+</script>
+
 </body>
 </html>
-
