--- a/nutrition.html
+++ b/nutrition.html
@@ -38,6 +38,8 @@
   <option value="subadult">Subadult</option>
   <option value="adult">Adult</option>
 </select>
+<label>Komodo dragon body weight (kg):</label><br>
+<input type="number" id="bodyWeight" step="0.1"><br><br>
 
 <p style="font-size:0.9em;color:#555;">
 Presets auto-fill a typical 4-week feeding plan. You may adjust values afterward.
@@ -71,8 +73,18 @@ Presets auto-fill a typical 4-week feeding plan. You may adjust values afterward
       <tr><td>Calcium</td><td id="calcium"></td></tr>
       <tr><td>Phosphorus</td><td id="phosphorus"></td></tr>
       <tr><td><strong>Ca : P ratio</strong></td><td id="capRatio"></td></tr>
-    </table>
+      <tr>
+      <td>Estimated energy requirement (per week)</td>
+      <td id="energyReq"></td>
+      </tr>
+      <tr>
+  <td><strong>Energy balance</strong></td>
+  <td id="energyBalance"></td>
+</tr>
 
+    </table>
+    <p id="energyNote"></p>
+    
     <p id="capNote" style="margin-top:15px;font-weight:bold;"></p>
   </div>
 
