--- a/nutrition.html
+++ b/nutrition.html
@@ -55,10 +55,10 @@ Presets auto-fill a typical 4-week feeding plan. You may adjust values afterward
       </tr>
     </thead>
     <tbody>
-      <tr><td>Week 1</td><td><input type="number" class="weekIntake" value="0"></td></tr>
-      <tr><td>Week 2</td><td><input type="number" class="weekIntake" value="0"></td></tr>
-      <tr><td>Week 3</td><td><input type="number" class="weekIntake" value="0"></td></tr>
-      <tr><td>Week 4</td><td><input type="number" class="weekIntake" value="0"></td></tr>
+      <tr><td>Week 1</td><td><input type="number" class="weekIntake" value="0" autocomplete="off"></td></tr>
+      <tr><td>Week 2</td><td><input type="number" class="weekIntake" value="0" autocomplete="off"></td></tr>
+      <tr><td>Week 3</td><td><input type="number" class="weekIntake" value="0" autocomplete="off"></td></tr>
+      <tr><td>Week 4</td><td><input type="number" class="weekIntake" value="0" autocomplete="off"></td></tr>
     </tbody>
   </table>
 
