--- a/nutrition.html
+++ b/nutrition.html
@@ -46,7 +46,8 @@ Presets auto-fill a typical 4-week feeding plan. You may adjust values afterward
 </p>
 
   <label>Weekly feeding plan (g prey per week):</label>
-
+  <label>The number provided is merely an example intended to illustrate feeding frequency based on the Komodo dragon’s developmental stage:</label>
+  
   <table>
     <thead>
       <tr>
