--- a/nutrition.html
+++ b/nutrition.html
@@ -45,8 +45,10 @@
 Presets auto-fill a typical 4-week feeding plan. You may adjust values afterward.
 </p>
 
-  <label>Weekly feeding plan (g prey per week):</label>
-  <label>The number provided is merely an example intended to illustrate feeding frequency based on the Komodo dragon’s developmental stage:</label>
+   <label>Weekly feeding plan (g prey per week):</label><br>
+  <p style="font-style:italic; color:#555; margin-top:0.25em;">
+    The number provided is merely an example intended to illustrate feeding frequency based on the Komodo dragon’s developmental stage.
+  </p>
   
   <table>
     <thead>
