--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Change the title per page -->
   <title>Reptile Energy Calculator</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- FAVICONS (put favicon.ico at site root /favicon.ico for maximum compatibility) -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
+  <!-- Optional higher-resolution / platform icons (place these at site root or adjust paths) -->
+  <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- for iOS home screen -->
+  <link rel="manifest" href="/site.webmanifest"> <!-- optional web app manifest -->
+  <meta name="theme-color" content="#ffffff"> <!-- used by some browsers for UI tint -->
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -167,4 +182,5 @@
 
 </body>
 </html>
+
 
