--- a/reptile-zone/index.html
+++ b/reptile-zone/index.html
@@ -10,7 +10,9 @@
     <link rel="icon" type="image/png" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Pixelify+Sans:wght@400;700&family=Press+Start+2P&family=VT323&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,7 +29,7 @@
         <!-- Pixel Art Header -->
         <header class="pixel-header">
             <div class="header-content">
-                <div class="header-icon">🦎</div>
+                <img src="../reptile-zone.png" alt="Reptile Zone" class="header-img">
                 <h1>Ferguson Zone Finder</h1>
             </div>
             <p class="subtitle">Find UV Requirements for Reptile Species</p>
@@ -37,9 +39,15 @@
         <div class="search-section">
             <div class="search-box">
                 <label for="searchInput" class="search-label">Search Species</label>
-                <input type="text" id="searchInput"
-                    placeholder="Enter species or common name (e.g. Varanus komodoensis)" onkeyup="searchSpecies()">
-                <div class="search-hint">Start typing to search...</div>
+                <div class="search-input-wrapper">
+                    <input type="text" id="searchInput" placeholder="Enter species or common name..."
+                        autocomplete="off">
+                    <button id="searchBtn" class="search-btn">Search</button>
+                    <div id="suggestions" class="suggestions-box"></div>
+                </div>
+                <!-- Removed inline onkeyup to handle in script -->
+                <!-- Removed static hint since we have dynamic suggestions -->
+                <!-- <div class="search-hint">Start typing to search...</div> -->
             </div>
         </div>
 
@@ -62,6 +70,25 @@
                 <div class="result-item">
                     <span class="result-label">Recommended UV Index</span>
                     <span class="result-value uv-value" id="uvi">—</span>
+                </div>
+            </div>
+
+            <!-- Interactive Zone Scale -->
+            <div class="zone-scale-wrapper">
+                <div class="scale-labels">
+                    <span>Zone 1</span>
+                    <span>Zone 2</span>
+                    <span>Zone 3</span>
+                    <span>Zone 4</span>
+                </div>
+                <div class="scale-bar">
+                    <div class="scale-segment seg-1"></div>
+                    <div class="scale-segment seg-2"></div>
+                    <div class="scale-segment seg-3"></div>
+                    <div class="scale-segment seg-4"></div>
+                    <div class="scale-pointer" id="scalePointer">
+                        <div class="pointer-arrow"></div>
+                    </div>
                 </div>
             </div>
         </div>
