--- a/Enrichment-randomizer/index.html
+++ b/Enrichment-randomizer/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1><img src="../favicon.png" alt="Zoo Icon" class="header-icon"> Zoo Enrichment Program Randomizer</h1>
+        <h1><img src="../randomizer.png" alt="Zoo Icon" class="header-icon"> Zoo Enrichment Program Randomizer</h1>
         <p class="subtitle">Create randomized weekly and daily enrichment schedules for your animals</p>
 
         <div class="input-section">
@@ -60,7 +60,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Zoo Enrichment Program | Designed to enhance animal welfare and behavioral diversity</p>
+        <p>&copy; 2025 ZootilityBelt &middot; Developed by Abdul Fattah</p>
     </footer>
 
     <script src="script.js"></script>
