--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .menu-container {
             display: flex;
             flex-direction: row;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
             justify-content: center;
             align-items: stretch;
             gap: 25px;
@@ -223,6 +223,12 @@
                 <img src="reptile-zone.png" alt="Reptile Zone" class="icon">
                 <h2>Ferguson Zone Finder</h2>
                 <p>Find the Ferguson Zone and UV requirements for reptile species.</p>
+            </a>
+
+            <a href="Enrichment-randomizer/index.html" class="menu-card">
+                <img src="randomizer.png" alt="Randomizer" class="icon">
+                <h2>Enrichment Randomizer</h2>
+                <p>Create randomized weekly and daily enrichment schedules for zoo animals.</p>
             </a>
         </div>
 
