--- a/qba-scoring/index.html
+++ b/qba-scoring/index.html
@@ -29,52 +29,6 @@
             </button>
         </div>
 
-        <!-- QBA Info Modal -->
-        <div id="qbaModal" class="modal">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 id="modalTitle">What is QBA?</h2>
-                    <button class="close-modal" onclick="closeQBAInfo()">✕</button>
-                </div>
-                <div id="modalBody">
-                    <p id="qbaIntro">
-                        Qualitative Behaviour Assessment (QBA) is a welfare assessment method that evaluates how an
-                        animal behaves, focusing on its overall behavioural expression (e.g. relaxed, tense, curious,
-                        fearful), rather than counting specific behaviours. It integrates posture, movement,
-                        responsiveness, and interaction to provide insight into the animal's affective (emotional) state
-                        as perceived by trained observers.
-                    </p>
-
-                    <h3 id="qbaImportanceTitle">Why is QBA Important in the Five Domains Model?</h3>
-                    <p id="qbaImportance">
-                        The Five Domains model links physical conditions (Nutrition, Environment, Health, Behaviour) to
-                        the animal's Mental State (Domain 5). QBA is particularly valuable because it directly informs
-                        this mental/affective domain, capturing both positive and negative experiences that may not be
-                        detected by physical or quantitative measures alone.
-                    </p>
-
-                    <h3 id="qbaHowTitle">How Does QBA Work?</h3>
-                    <ol id="qbaHowList">
-                        <li id="qbaStep1">An observer watches an animal or group for a defined period.</li>
-                        <li id="qbaStep2">After observation, the observer scores standardized descriptive terms (e.g.
-                            0–10 scale) based on how strongly each quality is expressed.</li>
-                        <li id="qbaStep3">The resulting profile is used to compare welfare across time, individuals, or
-                            management conditions.</li>
-                    </ol>
-                    <p id="qbaEffective">
-                        QBA is most effective when used alongside quantitative behavioural and health indicators,
-                        providing a more holistic welfare assessment.
-                    </p>
-
-                    <div class="summary-box" id="qbaSummary">
-                        <strong>One-sentence summary:</strong> QBA is a structured method for assessing animal emotional
-                        expression and is a key tool for evaluating the mental state domain within the Five Domains
-                        animal welfare framework.
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- Metadata -->
         <div class="meta-grid">
             <div class="field-group">
@@ -106,7 +60,8 @@
             </div>
         </div>
 
-        <h2 style="margin-top: 32px; margin-bottom: 8px; color: #2d3748; font-size: 1.3rem;">QBA Indicators</h2>
+        <h2 style="margin-top: 32px; margin-bottom: 8px; color: #1a1a2e; font-size: 1.3rem; font-weight: 700;">QBA
+            Indicators</h2>
         <p class="subtitle" style="text-align: left; margin-bottom: 24px; margin-top: 0;">Scoring scale: <strong>0
                 (Absent)</strong> to <strong>10 (Strongly expressed)</strong></p>
 
@@ -137,6 +92,52 @@
         <div class="note">
             ℹ️ QBA scores reflect overall behavioural expression, not specific behaviours. Consider the animal's body
             language, movement quality, and overall demeanor.
+        </div>
+    </div>
+
+    <!-- QBA Info Modal (placed outside container to avoid backdrop-filter stacking context issues) -->
+    <div id="qbaModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="modalTitle">What is QBA?</h2>
+                <button class="close-modal" onclick="closeQBAInfo()">✕</button>
+            </div>
+            <div id="modalBody">
+                <p id="qbaIntro">
+                    Qualitative Behaviour Assessment (QBA) is a welfare assessment method that evaluates how an
+                    animal behaves, focusing on its overall behavioural expression (e.g. relaxed, tense, curious,
+                    fearful), rather than counting specific behaviours. It integrates posture, movement,
+                    responsiveness, and interaction to provide insight into the animal's affective (emotional) state
+                    as perceived by trained observers.
+                </p>
+
+                <h3 id="qbaImportanceTitle">Why is QBA Important in the Five Domains Model?</h3>
+                <p id="qbaImportance">
+                    The Five Domains model links physical conditions (Nutrition, Environment, Health, Behaviour) to
+                    the animal's Mental State (Domain 5). QBA is particularly valuable because it directly informs
+                    this mental/affective domain, capturing both positive and negative experiences that may not be
+                    detected by physical or quantitative measures alone.
+                </p>
+
+                <h3 id="qbaHowTitle">How Does QBA Work?</h3>
+                <ol id="qbaHowList">
+                    <li id="qbaStep1">An observer watches an animal or group for a defined period.</li>
+                    <li id="qbaStep2">After observation, the observer scores standardized descriptive terms (e.g.
+                        0–10 scale) based on how strongly each quality is expressed.</li>
+                    <li id="qbaStep3">The resulting profile is used to compare welfare across time, individuals, or
+                        management conditions.</li>
+                </ol>
+                <p id="qbaEffective">
+                    QBA is most effective when used alongside quantitative behavioural and health indicators,
+                    providing a more holistic welfare assessment.
+                </p>
+
+                <div class="summary-box" id="qbaSummary">
+                    <strong>One-sentence summary:</strong> QBA is a structured method for assessing animal emotional
+                    expression and is a key tool for evaluating the mental state domain within the Five Domains
+                    animal welfare framework.
+                </div>
+            </div>
         </div>
     </div>
 
